# RCWidgets

./: ButtonBar.cpp  ButtonBar.h  CMakeLists.txt  CMakeUserPresets.json  Gauge.cpp  Gauge.h  RCWidgets.cpp  RCWidgets.h  RCWidgets.ui  RCmap.cpp  README.md  SerialPort.cpp  SerialPort.h  main.cpp
include/: ButtonBar.h  Gauge.h  RCMap.h  SerialPort.h  effects.h  enumCode.h  hid_struct.h  mozaAPI.h
include/effects/: ETConstantForce.h  ETDamper.h  ETFriction.h  ETInertia.h  ETSine.h  ETSpring.h  Effect.h  EffectException.h  WinDirectInputApiException.h
